fix missing icon class for visibility type on post

--- a/Source Code/WC/WC/Content/Style/custom.css
+++ b/Source Code/WC/WC/Content/Style/custom.css
@@ -147,6 +147,21 @@
         font-size: 12px;
         padding-left: 5px;
     }
+    .fa-1:before {
+        content: "\f0ac";
+    }
+    .fa-2:before {
+        content: "\f0c0";
+    }
+    .fa-3:before {
+        content: "\f023";
+    }
+    .dropdown-visibility li a {
+        float: none !important;
+    }
+    .dropdown-visibility li:hover {
+        background: #f7f7f7;
+    }
 
 /* Button */
 .btn {
